// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reducers > scenario should handle add bundle 1`] = `
Object {
  "bundles": Array [
    Object {
      "id": "1",
    },
  ],
  "feeds": Array [],
  "feedsById": Object {},
  "scenarios": Array [],
  "scenariosById": Object {},
}
`;

exports[`reducers > scenario should handle add scenario 1`] = `
Object {
  "bundles": Array [],
  "feeds": Array [],
  "feedsById": Object {},
  "scenarios": Array [
    Object {
      "id": "1",
    },
  ],
  "scenariosById": Object {
    "1": Object {
      "id": "1",
    },
  },
}
`;

exports[`reducers > scenario should handle default state 1`] = `
Object {
  "bundles": Array [],
  "feeds": Array [],
  "feedsById": Object {},
  "scenarios": Array [],
  "scenariosById": Object {},
}
`;

exports[`reducers > scenario should handle delete bundle 1`] = `
Object {
  "bundles": Array [],
}
`;

exports[`reducers > scenario should handle delete modification 1`] = `
Object {
  "modifications": Array [],
  "modificationsById": Object {},
  "modificationsByType": Object {},
}
`;

exports[`reducers > scenario should handle delete scenario 1`] = `
Object {
  "currentScenario": undefined,
  "scenarios": Array [],
  "scenariosById": Object {},
}
`;

exports[`reducers > scenario should handle log out 1`] = `
Object {
  "bundles": Array [],
  "feeds": Array [],
  "feedsById": Object {},
  "scenarios": Array [],
  "scenariosById": Object {},
}
`;

exports[`reducers > scenario should handle set bundle 1`] = `
Object {
  "bundles": Array [
    Object {
      "id": "1",
    },
  ],
  "currentScenario": Object {},
}
`;

exports[`reducers > scenario should handle set bundles 1`] = `
Object {
  "bundles": Array [
    Object {
      "id": "1",
    },
  ],
  "currentScenario": Object {
    "bundleId": "1",
  },
}
`;

exports[`reducers > scenario should handle set feeds 1`] = `
Object {
  "bundles": Array [],
  "feeds": Array [
    Object {
      "id": "1",
    },
  ],
  "feedsById": Object {
    "1": Object {
      "id": "1",
    },
  },
  "scenarios": Array [],
  "scenariosById": Object {},
}
`;

exports[`reducers > scenario should handle set modification 1`] = `
Object {
  "bundles": Array [],
  "feeds": Array [],
  "feedsById": Object {},
  "modifications": Array [
    Object {
      "id": "1",
      "type": "adjust-dwell-time",
    },
  ],
  "modificationsById": Object {
    "1": Object {
      "id": "1",
      "type": "adjust-dwell-time",
    },
  },
  "modificationsByType": Object {
    "adjust-dwell-time": Array [
      Object {
        "id": "1",
        "type": "adjust-dwell-time",
      },
    ],
  },
  "scenarios": Array [],
  "scenariosById": Object {},
}
`;

exports[`reducers > scenario should handle set modifications 1`] = `
Object {
  "bundles": Array [],
  "feeds": Array [],
  "feedsById": Object {},
  "modifications": Array [
    Object {
      "id": "1",
      "type": "adjust-dwell-time",
    },
  ],
  "modificationsById": Object {
    "1": Object {
      "id": "1",
      "type": "adjust-dwell-time",
    },
  },
  "modificationsByType": Object {
    "adjust-dwell-time": Array [
      Object {
        "id": "1",
        "type": "adjust-dwell-time",
      },
    ],
  },
  "scenarios": Array [],
  "scenariosById": Object {},
}
`;

exports[`reducers > scenario should handle set scenario 1`] = `
Object {
  "bundles": Array [
    Object {
      "id": "1",
    },
  ],
  "currentScenario": Object {
    "bundleId": "1",
    "id": "1",
  },
  "scenarios": Array [
    Object {
      "bundleId": "1",
      "id": "1",
    },
  ],
  "scenariosById": Object {
    "1": Object {
      "bundleId": "1",
      "id": "1",
    },
  },
}
`;

exports[`reducers > scenario should handle set scenarios 1`] = `
Object {
  "bundles": Array [],
  "feeds": Array [],
  "feedsById": Object {},
  "scenarios": Array [
    Object {
      "id": "1",
    },
  ],
  "scenariosById": Object {
    "1": Object {
      "id": "1",
    },
  },
}
`;

exports[`reducers > scenario should handle show variant 1`] = `
Object {
  "modifications": Array [
    Object {
      "id": "1",
      "showOnMap": undefined,
      "type": "adjust-dwell-time",
      "variants": Array [],
    },
  ],
  "modificationsById": Object {
    "1": Object {
      "id": "1",
      "showOnMap": undefined,
      "type": "adjust-dwell-time",
      "variants": Array [],
    },
  },
  "modificationsByType": Object {
    "adjust-dwell-time": Array [
      Object {
        "id": "1",
        "showOnMap": undefined,
        "type": "adjust-dwell-time",
        "variants": Array [],
      },
    ],
  },
}
`;
